tests/paczka1/small_fuzzy/13393357.err
Error in line 8: hrWr1 S467 4,0
Error in line 9: hrWr1 S666 93,8
